# Convolution

./: .gitignore  .gitmodules  .runJob.sh  .submission.pbs  .submission.slurm  CMakeLists.txt  Makefile
include/: BlurConstantKernel.cuh  BlurNaiveKernel.cuh  BlurSharedConstKernel.cuh  BlurSharedEqualConstKernel.cuh  BlurSharedKernel.cuh  BlurSharedSharedKernel.cuh  ConstantMemory.cuh  Constants.hpp  Convolution.hpp  Filter.hpp  Matrix.hpp
python_scripts/: GenerateData.py  PlotFigures.py  runPlotFigures.sh
scripts/: CMakeLists.txt  ConvolutionTest.cpp  template.tmp
src/: Convolution.cu
